# SquirrelChat

./: .gitignore  CMakeLists.txt  README.md  buffers.c  buffers.h  chat.c  chat.h  init_vars.c  init_vars.h  main.c  net_input_handler.c  net_io.c
p99/: p99_generic.h
src/: CMakeLists.txt  addr_res.h  attributes.h  buffers.c  buffers.h  builtin_commands.c  builtin_commands.h  builtin_ctcp.c  builtin_ctcp.h  builtin_ctcp_requests.c  builtin_ctcp_requests.h  builtin_ctcp_responses.c  builtin_ctcp_responses.h  casemap.c  casemap.h  chat.c  chat.h  cmd_responses.c  cmd_responses.h  commands.c  commands.h  config.h.cmake  connection_setup.c  connection_setup.h  ctcp.c  ctcp.h  errors.c  errors.h  irc_macros.h  irc_network.c  irc_network.h  irc_numerics.h  macros.h  main.c  message_parser.c  message_parser.h  message_types.c  message_types.h  net_input_handler.c  net_input_handler.h  (+11 more)
src/ui/: buffer.c  buffer.h  buffer_view.c  buffer_view.h  chat_viewer.c  chat_viewer.h  chat_window.c  chat_window.h  command_box.c  command_box.h  dialog_macros.h  main_menu_bar.c  main_menu_bar.h  network_tree.c  network_tree.h  settings_dialog.c  settings_dialog.h  user_list.c  user_list.h
ui/: chat_viewer.c  chat_viewer.h  chat_window.c  command_box.c  main_menu_bar.c  main_menu_bar.h  main_text_input.c  main_text_input.h  main_text_view.c  main_text_view.h  network_panel.c  network_panel.h
